--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.7",
     "react-datepicker": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
