--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.7",
