inicio de pruebas

--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "calendar",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
     "@reduxjs/toolkit": "^2.2.2",
+    "@testing-library/react": "^15.0.4",
+    "@types/jest": "^29.5.12",
     "axios": "^1.6.8",
+    "babel-jest": "^29.7.0",
     "date-fns": "^3.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.7",
     "react-datepicker": "^6.0.0",
@@ -20,12 +28,14 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.10.7",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
